# qax

./: LICENSE  README.md  pyproject.toml
examples/: How_to_Qax.ipynb  combining.py  const.py  identity.py  intro.ipynb  nesting.py  nullable_array.py  zero.py
qax/: __init__.py  constants.py  implicit_array.py  primitives.py  symbols.py  tracer.py  utils.py
qax/common/: type_utils.py  utils.py
qax/implicit/: implicit_array.py  implicit_utils.py
tests/: decorator.py  grad.py  nested.py  primitives.py  scan.py  symbols.py  transform.py  utils.py
