[tool.poetry]
name = 'qax'
version = '0.3.0'
description = 'A JAX transform for writing things which pretend to be tensors'
authors = ['Davis Yoshida <dyoshida@ttic.edu>']
license = 'MIT'
readme = 'README.md'
packages = [
    {include = 'qax'}
]

[tool.poetry.dependencies]
python = '^3.10'
jax = '^0.4.10'
jaxlib = '^0.4.10'
plum-dispatch = '^2.1.0'
optax = '^0.1.5'

[tool.poetry.dev-dependencies]
pytest = '^7.3.1'

[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.api'
